--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-497.0KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-164.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-220.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-311.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-2.37MB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-4.86MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-271.1KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-304.2KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-1.38MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-801.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-497.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-220.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
