--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.86MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-271.1KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.29MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-263.9KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-184.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-304.2KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-1.38MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-801.0KB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-288.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.19MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-911.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-947.3KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-864.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-288.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-911.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-864.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-288.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-911.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-864.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-288.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-911.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-864.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-288.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-911.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-864.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-288.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-911.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-864.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-288.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-911.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-864.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-729.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-304.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-801.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-288.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-911.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-947.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-864.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
